pkl model upload

--- a/project_code.ipynb
+++ b/project_code.ipynb
@@ -8,9 +8,11 @@
     "Our goal here is to develop a machine learning program that uses previous UFC fight statistics to determine who is most likely to win a fight. Our code is organized into the following sections:\n",
     "1. Preprocessing\n",
     "2. Initial Data Visualization\n",
-    "3. Feature Engineering\n",
-    "4. Additional Data Visualization\n",
-    "5. Model Training and Analysis"
+    "3. Data Cleaning\n",
+    "4. Feature Engineering\n",
+    "5. More Data Cleaning\n",
+    "6. Additional Data Visualization\n",
+    "7. Model Training and Analysis"
    ]
   },
   {
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +235,7 @@
        "<Axes: xlabel='BKOOdds', ylabel='RKOOdds'>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -278,16 +280,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature Engineering\n",
+    "## Data Cleaning\n",
     "- Removing insignificant columns\n",
     "- Identifying and fixing data inconsistencies\n",
-    "- Numericalization of features\n",
-    "- Recalculating features"
+    "- Numericalization of features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +330,7 @@
     }
    ],
    "source": [
-    "# -------- FEATURE ENGINEERING -------- #\n",
+    "# -------- DATA CLEANING -------- #\n",
     "# Removing insignificant columns\n",
     "\n",
     "# Look at the columns between 'EmptyArena' and 'BetterRank' to look at the number of null values\n",
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +356,7 @@
     }
    ],
    "source": [
-    "# -------- FEATURE ENGINEERING -------- #\n",
+    "# -------- DATA CLEANING -------- #\n",
     "# Identifying and fixing data inconsistencies\n",
     "\n",
     "# There is a spelling mistake in the BlueStance column so we fix it here\n",
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +396,7 @@
     }
    ],
    "source": [
-    "# -------- FEATURE ENGINEERING -------- #\n",
+    "# -------- DATA CLEANING -------- #\n",
     "# Numericalization of features\n",
     "\n",
     "# Taking the Title Bout column and assigning each string value to a numerical value for model training\n",
@@ -433,8 +434,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering\n",
+    "- Recalculating features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,13 +590,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More Data Cleaning\n",
+    "- Impute missing values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# -------- FEATURE ENGINEERING -------- #\n",
-    "# Recalculating features\n",
+    "# -------- DATA CLEANING -------- #\n",
+    "# Impute missing values\n",
     "\n",
     "# Assign X to the columns of the modified and improved dataset, minus the prediction label column\n",
     "X = df.drop('Winner', axis=1)\n",
@@ -617,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,8 +718,11 @@
     "X_train, X_test, y_train, y_test = train_test_split(X_imputed, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Identify the columns that have a high correlation with the prediction label and make a new X variable with only these columns\n",
-    "top_corr_cols = ['SubOddsDif', 'KOOddsDif', 'DecOddsDif', 'OddsDif', 'EVDif']\n",
-    "X_top = X_imputed[top_corr_cols]\n",
+    "top_cols = ['AgeDif', 'HeightDif', 'ReachDif', 'WinDif', 'LossDif', 'WinStreakDif', 'LoseStreakDif', 'LongestWinStreakDif']\n",
+    "X_top = X_imputed[top_cols]\n",
+    "# top_corr_cols = ['SubOddsDif', 'KOOddsDif', 'DecOddsDif', 'OddsDif', 'EVDif']\n",
+    "# Age, Height, Reach, Wins, Losses\n",
+    "# X_top = X_imputed[top_corr_cols]\n",
     "\n",
     "# Split this new data into training and test data (80:20 ratio)\n",
     "# Use only the columns with high correlation for X\n",
@@ -711,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -762,9 +782,9 @@
      "output_type": "stream",
      "text": [
       "Fitting 5 folds for each of 15 candidates, totalling 75 fits\n",
-      "Best Parameters: {'n_estimators': 150}\n",
-      "Best Cross-Validation Accuracy: 0.6266932270916334\n",
-      "Test Set Accuracy: 0.6279\n"
+      "Best Parameters: {'n_estimators': 300}\n",
+      "Best Cross-Validation Accuracy: 0.5603585657370518\n",
+      "Test Set Accuracy: 0.5610\n"
      ]
     }
    ],
@@ -797,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -849,9 +869,9 @@
      "output_type": "stream",
      "text": [
       "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n",
-      "Best Parameters: {'criterion': 'gini', 'max_depth': 3}\n",
-      "Best Cross-Validation Accuracy: 0.6593625498007968\n",
-      "Test Set Accuracy: 0.6614\n"
+      "Best Parameters: {'criterion': 'gini', 'max_depth': 2}\n",
+      "Best Cross-Validation Accuracy: 0.5886454183266931\n",
+      "Test Set Accuracy: 0.5865\n"
      ]
     }
    ],
@@ -885,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -937,8 +957,8 @@
      "text": [
       "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n",
       "Best Parameters: {'n_neighbors': 9}\n",
-      "Best Cross-Validation Accuracy: 0.6328685258964144\n",
-      "Test Set Accuracy: 0.6167\n"
+      "Best Cross-Validation Accuracy: 0.5406374501992032\n",
+      "Test Set Accuracy: 0.5578\n"
      ]
     }
    ],
@@ -971,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1017,16 +1037,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Parameters: {'C': 0.2, 'gamma': 'scale', 'kernel': 'rbf'}\n",
-      "Best Validation Accuracy: 0.6606\n",
-      "Test Accuracy: 0.6167\n"
+      "Best Parameters: {'C': 0.55, 'gamma': 'scale', 'kernel': 'rbf'}\n",
+      "Best Validation Accuracy: 0.5896\n",
+      "Test Accuracy: 0.5578\n"
      ]
     }
    ],
@@ -1063,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1075,19 +1095,19 @@
       "╞══════════════════════════════╪════════════╪════════════════════════════╡\n",
       "│ Random Forest - All Features │   0.662948 │                -0.00896414 │\n",
       "├──────────────────────────────┼────────────┼────────────────────────────┤\n",
-      "│ Random Forest - Top Features │   0.627888 │                -0.00119522 │\n",
+      "│ Random Forest - Top Features │   0.560956 │                -0.00059761 │\n",
       "├──────────────────────────────┼────────────┼────────────────────────────┤\n",
       "│ Decision Tree - All Features │   0.653386 │                -0.00438247 │\n",
       "├──────────────────────────────┼────────────┼────────────────────────────┤\n",
-      "│ Decision Tree - Top Features │   0.661355 │                -0.00199203 │\n",
+      "│ Decision Tree - Top Features │   0.586454 │                 0.00219124 │\n",
       "├──────────────────────────────┼────────────┼────────────────────────────┤\n",
       "│ KNN - All Features           │   0.611952 │                 0.0201195  │\n",
       "├──────────────────────────────┼────────────┼────────────────────────────┤\n",
-      "│ KNN - Top Features           │   0.616733 │                 0.0161355  │\n",
+      "│ KNN - Top Features           │   0.557769 │                -0.0171315  │\n",
       "├──────────────────────────────┼────────────┼────────────────────────────┤\n",
       "│ SVM - All Features           │   0.657371 │                 0.00139261 │\n",
       "├──────────────────────────────┼────────────┼────────────────────────────┤\n",
-      "│ SVM - Top Features           │   0.654183 │                 0.00637448 │\n",
+      "│ SVM - Top Features           │   0.587251 │                 0.00238985 │\n",
       "╘══════════════════════════════╧════════════╧════════════════════════════╛\n"
      ]
     }
@@ -1113,6 +1133,22 @@
     "\n",
     "# Output a results table showing each model we created and its associated accuracy score\n",
     "print(tabulate.tabulate(accuracies, headers, tablefmt=\"fancy_grid\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "ui_model = best_svc\n",
+    "\n",
+    "# Save the model to a file\n",
+    "with open('ufc_ui_model.pkl', 'wb') as f:\n",
+    "    pickle.dump(ui_model, f)\n",
+    "print(\"Model saved as ufc_model.pkl\")"
    ]
   },
   {
