--- a/project_code.ipynb
+++ b/project_code.ipynb
@@ -1137,9 +1137,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved as ufc_model.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "\n",
