final modifications to the code

--- a/project_code.ipynb
+++ b/project_code.ipynb
@@ -11,7 +11,6 @@
     "3. Data Cleaning\n",
     "4. Feature Engineering\n",
     "5. More Data Cleaning\n",
-    "6. Additional Data Visualization\n",
     "7. Model Training and Analysis"
    ]
   },
@@ -26,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,12 +43,13 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.impute import KNNImputer\n",
     "from sklearn.svm import SVC\n",
-    "import tabulate"
+    "import tabulate\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "<Axes: xlabel='BKOOdds', ylabel='RKOOdds'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,85 +628,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Additional Data Visualization\n",
-    "- Retest correlation on the new columns to see how they relate to the label"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TotalTitleBoutDif 0.00011429824793766647\n",
-      "LoseStreakDif 0.0006436109376376177\n",
-      "WinsDecByUnanDif 0.0014488941006811674\n",
-      "RedFighter 0.002802938667203959\n",
-      "SubDif 0.003860637630332731\n",
-      "LossDif 0.007744925143067027\n",
-      "BlueFighter 0.008488123915768121\n",
-      "StanceDif 0.02607238327732016\n",
-      "BetterRank 0.026375118727904517\n",
-      "TitleBout 0.037388862055378946\n",
-      "LongestWinStreakDif 0.03910198107213833\n",
-      "AgeDif 0.03947741956453483\n",
-      "HeightDif 0.040478469529998805\n",
-      "WinDif 0.04610864575391147\n",
-      "KODif 0.05057419032135863\n",
-      "SigStrDif 0.05199352945496729\n",
-      "AvgSubAttDif 0.05296452851177565\n",
-      "ReachDif 0.05925335436377483\n",
-      "TotalRoundDif 0.07084868538232268\n",
-      "AvgTDPctDif 0.07443181715092533\n",
-      "SigStrPctDif 0.09609848310292622\n",
-      "AvgTDDif 0.11215197415867355\n",
-      "WinStreakDif 0.12238508498470604\n",
-      "SubOddsDif 0.21502713753237024\n",
-      "KOOddsDif 0.2709722514353567\n",
-      "DecOddsDif 0.306888567094175\n",
-      "OddsDif 0.34803372314388065\n",
-      "EVDif 0.3514430864354737\n",
-      "dict_keys(['SubOddsDif', 'KOOddsDif', 'DecOddsDif', 'OddsDif', 'EVDif'])\n"
-     ]
-    }
-   ],
-   "source": [
-    "# -------- ADDITIONAL DATA VIZUALIZATION -------- #\n",
-    "# Retest correlation on the transformed and new columns to see how they relate to the label\n",
-    "\n",
-    "# Go through all the columns in the dataset and find their correlation with the prediction label\n",
-    "corr_dict = {}\n",
-    "for col in X_imputed.columns:\n",
-    "    corr_dict[col] = abs(X_imputed[col].corr(y))\n",
-    "\n",
-    "# Find the columns with a correlation higher than or equal to 0.17\n",
-    "high_corr = {}\n",
-    "for w in sorted(corr_dict, key=corr_dict.get):\n",
-    "    if corr_dict[w] >= 0.17:\n",
-    "        high_corr[w] = corr_dict[w]\n",
-    "    print(w, corr_dict[w])\n",
-    "print(high_corr.keys())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Model Training and Analysis\n",
     "- Building training and test datasets\n",
     "- Model 1: Random Forest Classification\n",
     "- Model 2: Decision Tree Classification\n",
     "- Model 3: K-Nearest Neighbors (KNN) Classification\n",
     "- Model 4: Support Vector Machine (SVM) Classification\n",
-    "- Discussion of results and conclusions"
+    "- Output accuracy results\n",
+    "- Save best-performing model for UI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,21 +651,18 @@
     "# Use all possible features for X\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_imputed, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Identify the columns that have a high correlation with the prediction label and make a new X variable with only these columns\n",
+    "# Identify the columns that will be used in the UI to predict the winner of a new fight matchup\n",
     "top_cols = ['AgeDif', 'HeightDif', 'ReachDif', 'WinDif', 'LossDif', 'WinStreakDif', 'LoseStreakDif', 'LongestWinStreakDif']\n",
     "X_top = X_imputed[top_cols]\n",
-    "# top_corr_cols = ['SubOddsDif', 'KOOddsDif', 'DecOddsDif', 'OddsDif', 'EVDif']\n",
-    "# Age, Height, Reach, Wins, Losses\n",
-    "# X_top = X_imputed[top_corr_cols]\n",
     "\n",
     "# Split this new data into training and test data (80:20 ratio)\n",
-    "# Use only the columns with high correlation for X\n",
+    "# Use only the columns that will be used in our UI to predict the winner of a new fight matchup\n",
     "X_top_train, X_top_test, y_top_train, y_top_test = train_test_split(X_top, y, test_size=0.2, random_state=43)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -765,8 +696,8 @@
     "print(\"Best Cross-Validation Accuracy:\", grid_search.best_score_)\n",
     "\n",
     "# Evaluate the optimal model on the test set and return the accuracy score\n",
-    "best_rf = grid_search.best_estimator_\n",
-    "y_pred = best_rf.predict(X_test)\n",
+    "best_rf_all = grid_search.best_estimator_\n",
+    "y_pred = best_rf_all.predict(X_test)\n",
     "rf_all_accuracy = accuracy_score(y_test, y_pred)\n",
     "rf_all_dif = grid_search.best_score_ - rf_all_accuracy\n",
     "print(f\"Test Set Accuracy: {rf_all_accuracy:.4f}\")"
@@ -774,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +722,7 @@
    "source": [
     "# -------- MODEL TRAINING AND ANALYSIS -------- #\n",
     "# Model 1: Random Forest Classification\n",
-    "# Training and testing using the top correlated set of features\n",
+    "# Training and testing using the UI features\n",
     "\n",
     "# Define parameter grid for optimization\n",
     "param_grid = {'n_estimators': [10, 50, 100, 150, 200, 210, 220, 230, 240, 250, 260, 270, 280, 290, 300]}\n",
@@ -808,8 +739,8 @@
     "print(\"Best Cross-Validation Accuracy:\", grid_search.best_score_)\n",
     "\n",
     "# Evaluate the optimal model on the test set and return the accuracy score\n",
-    "best_rf = grid_search.best_estimator_\n",
-    "y_pred = best_rf.predict(X_top_test)\n",
+    "best_rf_ui = grid_search.best_estimator_\n",
+    "y_pred = best_rf_ui.predict(X_top_test)\n",
     "rf_top_accuracy = accuracy_score(y_top_test, y_pred)\n",
     "rf_top_dif = grid_search.best_score_ - rf_top_accuracy\n",
     "print(f\"Test Set Accuracy: {rf_top_accuracy:.4f}\")"
@@ -817,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -852,8 +783,8 @@
     "print(\"Best Cross-Validation Accuracy:\", grid_search.best_score_)\n",
     "\n",
     "# Evaluate the optimal model on the test set and return the accuracy score\n",
-    "best_dt = grid_search.best_estimator_\n",
-    "y_pred = best_dt.predict(X_test)\n",
+    "best_dt_all = grid_search.best_estimator_\n",
+    "y_pred = best_dt_all.predict(X_test)\n",
     "dt_all_accuracy = accuracy_score(y_test, y_pred)\n",
     "dt_all_dif = grid_search.best_score_ - dt_all_accuracy\n",
     "print(f\"Test Set Accuracy: {dt_all_accuracy:.4f}\")"
@@ -861,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +809,7 @@
    "source": [
     "# -------- MODEL TRAINING AND ANALYSIS -------- #\n",
     "# Model 2: Decision Tree Classification\n",
-    "# Training and testing using the top correlated set of features\n",
+    "# Training and testing using the UI features\n",
     "\n",
     "# Define parameter grid for optimization\n",
     "param_grid = {'max_depth': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10],\n",
@@ -896,8 +827,8 @@
     "print(\"Best Cross-Validation Accuracy:\", grid_search.best_score_)\n",
     "\n",
     "# Evaluate the optimal model on the test set and return the accuracy score\n",
-    "best_dt = grid_search.best_estimator_\n",
-    "y_pred = best_dt.predict(X_top_test)\n",
+    "best_dt_ui = grid_search.best_estimator_\n",
+    "y_pred = best_dt_ui.predict(X_top_test)\n",
     "dt_top_accuracy = accuracy_score(y_top_test, y_pred)\n",
     "dt_top_dif = grid_search.best_score_ - dt_top_accuracy\n",
     "print(f\"Test Set Accuracy: {dt_top_accuracy:.4f}\")"
@@ -905,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -939,8 +870,8 @@
     "print(\"Best Cross-Validation Accuracy:\", grid_search.best_score_)\n",
     "\n",
     "# Evaluate the optimal model on the test set and return the accuracy score\n",
-    "best_knn = grid_search.best_estimator_\n",
-    "y_pred = best_knn.predict(X_test)\n",
+    "best_knn_all = grid_search.best_estimator_\n",
+    "y_pred = best_knn_all.predict(X_test)\n",
     "knn_all_accuracy = accuracy_score(y_test, y_pred)\n",
     "knn_all_dif = grid_search.best_score_ - knn_all_accuracy\n",
     "print(f\"Test Set Accuracy: {knn_all_accuracy:.4f}\")"
@@ -948,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +896,7 @@
    "source": [
     "# -------- MODEL TRAINING AND ANALYSIS -------- #\n",
     "# Model 3: K-Nearest Neighbors (KNN) Classification\n",
-    "# Training and testing using the top correlated set of features\n",
+    "# Training and testing using the UI features\n",
     "\n",
     "# Define parameter grid for optimization\n",
     "param_grid = {'n_neighbors': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]}\n",
@@ -982,8 +913,8 @@
     "print(\"Best Cross-Validation Accuracy:\", grid_search.best_score_)\n",
     "\n",
     "# Evaluate the optimal model on the test set and return the accuracy score\n",
-    "best_knn = grid_search.best_estimator_\n",
-    "y_pred = best_knn.predict(X_top_test)\n",
+    "best_knn_ui = grid_search.best_estimator_\n",
+    "y_pred = best_knn_ui.predict(X_top_test)\n",
     "knn_top_accuracy = accuracy_score(y_top_test, y_pred)\n",
     "knn_top_dif = grid_search.best_score_ - knn_top_accuracy\n",
     "print(f\"Test Set Accuracy: {knn_top_accuracy:.4f}\")"
@@ -991,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1028,8 +959,8 @@
     "print(f\"Best Validation Accuracy: {grid_search.best_score_:.4f}\")\n",
     "\n",
     "# Evaluate the optimal model on the test set and return the accuracy score\n",
-    "best_svc = grid_search.best_estimator_\n",
-    "y_pred = best_svc.predict(X_test)\n",
+    "best_svc_all = grid_search.best_estimator_\n",
+    "y_pred = best_svc_all.predict(X_test)\n",
     "svc_all_accuracy = accuracy_score(y_test, y_pred)\n",
     "svc_all_dif = grid_search.best_score_ - svc_all_accuracy\n",
     "print(f\"Test Accuracy: {svc_all_accuracy:.4f}\")"
@@ -1037,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +984,7 @@
    "source": [
     "# -------- MODEL TRAINING AND ANALYSIS -------- #\n",
     "# Model 4: Support Vector Machine (SVM) Classification\n",
-    "# Training and testing using the top correlated set of features\n",
+    "# Training and testing using the UI features\n",
     "\n",
     "# Define parameter grid for optimization\n",
     "param_grid = {\n",
@@ -1074,8 +1005,8 @@
     "print(f\"Best Validation Accuracy: {grid_search.best_score_:.4f}\")\n",
     "\n",
     "# Evaluate the optimal model on the test set and return the accuracy score\n",
-    "best_svc = grid_search.best_estimator_\n",
-    "y_pred = best_svc.predict(X_top_test)\n",
+    "best_svc_ui = grid_search.best_estimator_\n",
+    "y_pred = best_svc_ui.predict(X_top_test)\n",
     "svc_top_accuracy = accuracy_score(y_top_test, y_pred)\n",
     "svc_top_dif = grid_search.best_score_ - svc_top_accuracy\n",
     "print(f\"Test Accuracy: {knn_top_accuracy:.4f}\")"
@@ -1083,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1095,37 +1026,37 @@
       "╞══════════════════════════════╪════════════╪════════════════════════════╡\n",
       "│ Random Forest - All Features │   0.662948 │                -0.00896414 │\n",
       "├──────────────────────────────┼────────────┼────────────────────────────┤\n",
-      "│ Random Forest - Top Features │   0.560956 │                -0.00059761 │\n",
+      "│ Random Forest - UI Features  │   0.560956 │                -0.00059761 │\n",
       "├──────────────────────────────┼────────────┼────────────────────────────┤\n",
       "│ Decision Tree - All Features │   0.653386 │                -0.00438247 │\n",
       "├──────────────────────────────┼────────────┼────────────────────────────┤\n",
-      "│ Decision Tree - Top Features │   0.586454 │                 0.00219124 │\n",
+      "│ Decision Tree - UI Features  │   0.586454 │                 0.00219124 │\n",
       "├──────────────────────────────┼────────────┼────────────────────────────┤\n",
       "│ KNN - All Features           │   0.611952 │                 0.0201195  │\n",
       "├──────────────────────────────┼────────────┼────────────────────────────┤\n",
-      "│ KNN - Top Features           │   0.557769 │                -0.0171315  │\n",
+      "│ KNN - UI Features            │   0.557769 │                -0.0171315  │\n",
       "├──────────────────────────────┼────────────┼────────────────────────────┤\n",
       "│ SVM - All Features           │   0.657371 │                 0.00139261 │\n",
       "├──────────────────────────────┼────────────┼────────────────────────────┤\n",
-      "│ SVM - Top Features           │   0.587251 │                 0.00238985 │\n",
+      "│ SVM - UI Features            │   0.587251 │                 0.00238985 │\n",
       "╘══════════════════════════════╧════════════╧════════════════════════════╛\n"
      ]
     }
    ],
    "source": [
     "# -------- MODEL TRAINING AND ANALYSIS -------- #\n",
-    "# Discussion of results and conclusions\n",
+    "# Output accuracy results\n",
     "\n",
     "# Pair model names and descriptions with the variable for its accuracy\n",
     "accuracies = [\n",
     "    ['Random Forest - All Features', rf_all_accuracy, rf_all_dif],\n",
-    "    ['Random Forest - Top Features', rf_top_accuracy, rf_top_dif],\n",
+    "    ['Random Forest - UI Features', rf_top_accuracy, rf_top_dif],\n",
     "    ['Decision Tree - All Features', dt_all_accuracy, dt_all_dif],\n",
-    "    ['Decision Tree - Top Features', dt_top_accuracy, dt_top_dif],\n",
+    "    ['Decision Tree - UI Features', dt_top_accuracy, dt_top_dif],\n",
     "    ['KNN - All Features', knn_all_accuracy, knn_all_dif],\n",
-    "    ['KNN - Top Features', knn_top_accuracy, knn_top_dif],\n",
+    "    ['KNN - UI Features', knn_top_accuracy, knn_top_dif],\n",
     "    ['SVM - All Features', svc_all_accuracy, svc_all_dif],\n",
-    "    ['SVM - Top Features', svc_top_accuracy, svc_top_dif]\n",
+    "    ['SVM - UI Features', svc_top_accuracy, svc_top_dif]\n",
     "]\n",
     "\n",
     "# Identify the necessary headers for the results table\n",
@@ -1137,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1149,22 +1080,17 @@
     }
    ],
    "source": [
-    "import pickle\n",
+    "# -------- MODEL TRAINING AND ANALYSIS -------- #\n",
+    "# Save best-performing model for UI\n",
     "\n",
-    "ui_model = best_svc\n",
+    "# Assign the UI model as the best-performing UI model\n",
+    "# We decided that the best-performing model should be the one with the highest accuracy score and low training - test accuracy difference\n",
+    "ui_model = best_svc_ui\n",
     "\n",
-    "# Save the model to a file\n",
+    "# Save the best-performing model to a pkl file for the UI\n",
     "with open('ufc_ui_model.pkl', 'wb') as f:\n",
     "    pickle.dump(ui_model, f)\n",
     "print(\"Model saved as ufc_model.pkl\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Discussion of results and conclusions\n",
-    "Based on these results, we can conclude that..."
    ]
   }
  ],
